<?xml version="1.0" encoding="utf-8"?>
<resources>

<!-- Menu -->
<string name="app_name">AsteroidTracker</string>
<string name="quit">Quit</string>
<string name="settings">Settings</string>
<string name="about">About</string>

<!-- About -->
<string name="developedby"><![CDATA[ <p><em>AsteroidTracker is developed by BunnyFish, a San Francisco app team. </em></p> ]]></string>
<string name="aboutPage">
    <![CDATA[
    <p>AsteroidTracker is an astronomy app providing the latest information on  Near-Earth Objects. By NASA\'s definition, Near-Earth Objects (NEOs) are &quot;comets and asteroids that have been nudged by the gravitational attraction of nearby planets into orbits that allow them to enter the Earth\'s neighborhood.&quot;</p>
    <p>Basically, they\'re the space stuff flying by our planet at relatively close ranges. </p>
    <p>The AsteroidTracker app provides information on NEOs that are making their closest pass to Earth soon, those that just passed  and the relative distances at which they\'re by whizzing by. We\'ve recently added the SpaceTracks  tab to provide you with the latest and greatest in   space-related news, culture, fun and photos. </p>
    <p>AsteroidTracker and SpaceTracks are labors of love, provided freely by a couple of nerds who want more people to care about astronomy, space travel and science in general. We love to hear from our users with suggestions, (respectful) complaints, questions or anything else you want to tell us. </p>
    <p>Thanks for checking us out, and long live science!</p>
    <p>Sincerely, <br />
    <strong>The Nerds at BunnyFish</strong></p>
    <p><em>&quot;Science is a way of thinking much more than it is a body of knowledge.&quot;   Carl Sagan </em></p>
    <p>Email the BunnyFish team: <a href="mailto:bunnyfishapps@gmail.com" title="Email the BunnyFish team">BunnyFishApps@gmail.com</a></p>
    ]]>
</string>

<string name="about_space_track_link">Check out all of the SpaceTracks posts, new and old, on Tumblr! - http://spacetracks.tumblr.com</string>
<string name="helpful_links"><![CDATA[ <p><strong>Helpful links to more NEO information:</strong></p> ]]></string>

<string name="about_impactRisk"><p>Impact Risk - Sentry Risk Table: <a href="http://neo.jpl.nasa.gov/risk/" target="_blank">http://neo.jpl.nasa.gov/risk/</a> </p></string>
<string name="about_impactRiskDetail"><p>Impact Risk - FAQ: <a href="http://neo.jpl.nasa.gov/risk/doc/sentry_faq.html" target="_blank">http://neo.jpl.nasa.gov/risk/doc/sentry_faq.html</a> </p></string>
<string name="about_closeApproaches"><p>Close Approaches: <a href="http://neo.jpl.nasa.gov/ca/" target="_blank">http://neo.jpl.nasa.gov/ca/</a> </p></string>
<string name="about_torinoScale"><p>The Torino Impact Hazard Scale: <a href="http://neo.jpl.nasa.gov/torino_scale.html" target="_blank">http://neo.jpl.nasa.gov/torino_scale.html</a> </p></string>
<string name="about_impactRiskFaq"><p>Impact Risk - FAQ: <a href="http://neo.jpl.nasa.gov/risk/doc/sentry_faq.html" target="_blank">http://neo.jpl.nasa.gov/risk/doc/sentry_faq.html</a> </p></string>
<string name="about_JPLNews"><p>JPL Asteroid News: <a href="http://www.jpl.nasa.gov/asteroidwatch/" target="_blank">http://www.jpl.nasa.gov/asteroidwatch/</a></p></string>

<string name="visit_neoSite">Go To NEO Website</string>
<string name="visit_bunnyFish">Go To bunnyFish</string>

<!-- Error -->
<string name="feedDown">Unable to retrieve Asteroid Data</string>
<string name="refresh">Refresh</string>
<string name="networkerror">It seems your mobile/wifi network(s) are unavailable, please check your system settings, airplane mode maybe?? Either way, Sad Panda (Feel free to submit a bug report if you feel this message is in error, though its likely not).</string>

<!-- Share -->
<!-- <string name="shareName">Asteroid</string> -->
<!-- <string name="shareDist">missDistance is</string> -->
<!-- <string name="shareDist2">(km)</string> -->
<!-- <string name="shareLink">Check it out</string> -->
<!-- <string name="shareHash">#AsteroidTrackert</string> -->
<!-- <string name="sharePlayLink">http://bit.ly/n</string> -->

<!-- SkyLog Info-->
<string name="skylog_button_vote_now">Vote Now!</string>
<string name="skylog_button_more_info">Learn More about SkyLog</string>
<string name="skylog_continueButton">Continue to AsteroidTracker</string>
<string name="skylog_dont_show">Never Show this page again</string>
<string name="skylog_twitter_message">I vote &#35;skylogneowsapp for &#64;spaceapps People\'s Choice Award&#33;</string>
<string name="skylog_weebly_site">http://tiny.cc/skylogger</string>
<string name="skylog_space_apps_site">http://spaceappschallenge.org/project/neows/</string>
<string name="skylog_twitter_share_link">http://tiny.cc/skylog</string>
<string name="about_skylog">About SkyLog</string>

<string name="skylog_message_request">Your dedicated AsteroidTracker team humbly requests that you</string>
<string name="skylog_message_vote">Vote for SkyLog!</string>
<string name="skylog_message_tag_line">Social stargazing – with a purpose!</string>
<string name="skylog_message_win">To win the 2013 NASA SpaceApps challenge.</string>
<string name="skylog_message_howTo">Vote via Twitter for SkyLog and NeoWs to win the 2013 NASA SpaceApps Challenge</string>
<string name="skylog_message_description">We aim to make stargazing - especially NEO observation - simpler, more social and more personally and scientifically meaningful for astronomers of all levels.</string>
<!-- Your dedicated AsteroidTracker team humbly requests that you -->
<!-- Vote for SkyLog! -->
<!-- Social stargazing – with a purpose! -->
<!-- To win the 2013 NASA SpaceApps challenge.  -->
<!-- We aim to make stargazing - especially NEO observation - simpler, more social and more personally and scientifically meaningful for astronomers of all levels. -->

</resources>

