<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <ImageView
        android:id="@+id/aboutImage"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:src="@drawable/splash48" />

    <TextView
        android:id="@+id/about_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="13dip" />

    <TextView
        android:id="@+id/about_space_track_link"
        android:text="@string/about_space_track_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:linksClickable="true"
        android:textSize="13dip" />

    <TextView
        android:id="@+id/aboutHelpLinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:textSize="14dip" >
    </TextView>
    <TextView
        android:id="@+id/about_link_closeApproaches"
        android:text="@string/about_closeApproaches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="12dip" >
    </TextView>
    <TextView
        android:id="@+id/about_link_impact_risk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/about_impactRisk"
        android:textSize="12dip" >
    </TextView>

    <TextView
        android:id="@+id/about_link_torino_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/about_torinoScale"
        android:textSize="12dip" >
    </TextView>

    <TextView
        android:id="@+id/about_impactRiskFaq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/about_impactRiskFaq"
        android:textSize="12dip" >
    </TextView>

    <TextView
        android:id="@+id/about_JPLNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/about_JPLNews"
        android:textSize="12dip" >
    </TextView>

    <TextView
        android:id="@+id/about_developedBY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp">
    </TextView>

</LinearLayout>
    