<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/skylogbackground">

    
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


<TextView
    android:id="@+id/skylogMessageRequest"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="false"
        android:shadowColor="#000000"
        android:shadowRadius="0.3"
        android:shadowDx="8"
        android:shadowDy="8"
    android:layout_centerVertical="false"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="15dp"
    android:gravity="center_horizontal"
    android:text="@string/skylog_message_request"
    android:textSize="15dp" />

<ImageView
    android:id="@+id/voteNowImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/skylogMessageRequest"
    android:background="@drawable/voteskylog"
/>

<TextView
    android:id="@+id/skylogTagLine"
    android:layout_below="@+id/voteNowImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/skylog_message_tag_line"
    android:layout_marginRight="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginBottom="15dp"
    android:textStyle="bold"
    android:textSize="18dp"
    />

<TextView
    android:id="@+id/skylogHowTo"
    android:layout_below="@+id/skylogTagLine"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:text="@string/skylog_message_howTo"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="10dp"
    android:textStyle="bold"
    android:textSize="15dp"
    />

<Button
    android:id="@+id/skylogButtonVoteNow"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:gravity="center_horizontal"
    android:layout_centerHorizontal="true"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="5dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/skylogButtonMoreInfo"
    android:onClick="voteForSkyLog"
    android:text="@string/skylog_button_vote_now"
    android:textSize="14dp" />

<Button
    android:id="@+id/skylogButtonMoreInfo"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:gravity="center_horizontal"
    android:layout_centerHorizontal="true"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="5dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/skylogHowTo"
    android:text="@string/skylog_button_more_info"
    android:textSize="14dp" />

<Button
    android:id="@+id/skyLogContinueToApp"
    android:layout_below="@+id/skylogButtonVoteNow"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:gravity="center_horizontal"
    android:layout_centerHorizontal="true"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="5dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:text="@string/skylog_continueButton"
    android:textSize="14dp"
    />

<Button
    android:id="@+id/skylogDontShow"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:gravity="center_horizontal"
    android:layout_centerHorizontal="true"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/skyLogContinueToApp"
    android:text="@string/skylog_dont_show"
    android:textSize="14dp" />

<TextView
    android:id="@+id/skylogDescription"
    android:layout_below="@+id/skylogDontShow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    android:text="@string/skylog_message_description"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="2dp"
    android:textSize="16dp" />
</RelativeLayout>
</ScrollView>
</RelativeLayout>